fix: unexpected outline on modal__input on small screens

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -36,6 +36,7 @@
   border: 0.2rem solid $color-primary;
   border-radius: 1rem;
   @include font(1.6rem, 1.6rem, 500);
+  outline: none;
 
   &:active,
   &:focus {
